unpackaged/main/default/objects/Opportunity/fields/Academic_Interests_Disciplines_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Academic_Interests_Disciplines_Legacy__c</fullName>
    <inlineHelpText>This is legacy data from submissions prior to 11-13-2020.</inlineHelpText>
    <label>z_Academic Interests/Disciplines Legacy</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>