unpackaged/main/default/objects/Opportunity/fields/Account_Billing_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_State_Province__c</fullName>
    <description>Created for use in Distribution Engine</description>
    <formula>Account.BillingState</formula>
    <label>Account Billing State/Province</label>
    <type>Text</type>
</CustomField>