unpackaged/main/default/objects/Opportunity/fields/Activities_Resume_optional__c.field-meta.xml
<CustomField>
    <fullName>Activities_Resume_optional__c</fullName>
    <label>z_Activities Resume (optional)</label>
    <type>Url</type>
</CustomField>