unpackaged/main/default/objects/Opportunity/fields/Actual_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Actual_Amount_Due__c</fullName>
    <description>Critical data point for financial services reporting</description>
    <formula>Net_Tuition__c - Amount_Paid__c - Pell_Grant_Amount_Paid__c - Student_Loan_Amount_Paid__c - Parent_Loan_Amount_Paid__c - Private_Loan_Amount_Paid__c - Deposit_Amount__c - Verto_Fund_Amount__c + Refunded_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Net Tuition minus Amount Paid, Pell Grant Amount Paid, loan amounts paid, Verto Fund Amount and Deposit Amount. Takes into consideration any refunded amount.</inlineHelpText>
    <label>Actual Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>