unpackaged/main/default/objects/Opportunity/fields/Add_to_f9list_id__c.field-meta.xml
<CustomField>
    <fullName>Add_to_f9list_id__c</fullName>
    <label>Add to Five9 List</label>
    <length>50</length>
    <type>Text</type>
</CustomField>