unpackaged/main/default/objects/Opportunity/fields/Additional_Document__c.field-meta.xml
<CustomField>
    <fullName>Additional_Document__c</fullName>
    <description>This field is uploaded from the College Planning Form.</description>
    <inlineHelpText>This field is uploaded from the College Planning Form.</inlineHelpText>
    <label>z_Additional Document</label>
    <type>Url</type>
</CustomField>