unpackaged/main/default/objects/Opportunity/fields/Additional_feedback_for_Student_Success__c.field-meta.xml
<CustomField>
    <fullName>Additional_feedback_for_Student_Success__c</fullName>
    <label>Additional feedback for Student Success</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>