unpackaged/main/default/objects/Opportunity/fields/Address_2__c.field-meta.xml
<CustomField>
    <fullName>Address_2__c</fullName>
    <label>z_Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>