unpackaged/main/default/objects/Opportunity/fields/Admission_Denied_Reason__c.field-meta.xml
<CustomField>
    <fullName>Admission_Denied_Reason__c</fullName>
    <label>Admission Denied Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Behavior</fullName>
            </value>
            <value>
                <fullName>Low GPA</fullName>
            </value>
            <value>
                <fullName>Needs Academic Accommodations</fullName>
            </value>
            <value>
                <fullName>Safety Reasons</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>