unpackaged/main/default/objects/Opportunity/fields/All_About_You__c.field-meta.xml
<CustomField>
    <fullName>All_About_You__c</fullName>
    <label>Additional Grant Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>