unpackaged/main/default/objects/Opportunity/fields/Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Amount_Due__c</fullName>
    <formula>Tuition__c - Amount_Paid__c -  Verto_Fund_Amount__c - Discount_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Tuition - Amount Paid -  Verto Fund Amount - Discount Total</inlineHelpText>
    <label>Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>