unpackaged/main/default/objects/Opportunity/fields/Amount_Per_Payment__c.field-meta.xml
<CustomField>
    <fullName>Amount_Per_Payment__c</fullName>
    <label>Amount Per Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>