unpackaged/main/default/objects/Opportunity/fields/Application_Approved_Boolean__c.field-meta.xml
<CustomField>
    <fullName>Application_Approved_Boolean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_Application Approved - CB</label>
    <type>Checkbox</type>
</CustomField>