unpackaged/main/default/objects/Opportunity/fields/Application_Complete__c.field-meta.xml
<CustomField>
    <fullName>Application_Complete__c</fullName>
    <label>z_Application Complete</label>
    <type>Date</type>
</CustomField>