unpackaged/main/default/objects/Opportunity/fields/Application_Complete_Boolean__c.field-meta.xml
<CustomField>
    <fullName>Application_Complete_Boolean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_Application Complete</label>
    <type>Checkbox</type>
</CustomField>