unpackaged/main/default/objects/Opportunity/fields/Application_Packet_Sent__c.field-meta.xml
<CustomField>
    <fullName>Application_Packet_Sent__c</fullName>
    <label>Application Packet Sent</label>
    <type>Date</type>
</CustomField>