unpackaged/main/default/objects/Opportunity/fields/Application_Sent_Boolean__c.field-meta.xml
<CustomField>
    <fullName>Application_Sent_Boolean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_Application Sent</label>
    <type>Checkbox</type>
</CustomField>