unpackaged/main/default/objects/Opportunity/fields/Associated_Application__c.field-meta.xml
<CustomField>
    <fullName>Associated_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>