unpackaged/main/default/objects/Opportunity/fields/Associated_Application_Source__c.field-meta.xml
<CustomField>
    <fullName>Associated_Application_Source__c</fullName>
    <formula>Associated_Application__r.Source__c</formula>
    <label>Associated Application Source</label>
    <type>Text</type>
</CustomField>