unpackaged/main/default/objects/Opportunity/fields/Associated_Application_UTM_Source__c.field-meta.xml
<CustomField>
    <fullName>Associated_Application_UTM_Source__c</fullName>
    <formula>Associated_Application__r.UTM_Source__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Associated Application UTM Source</label>
    <type>Text</type>
</CustomField>