unpackaged/main/default/objects/Opportunity/fields/Attempted_Contact__c.field-meta.xml
<CustomField>
    <fullName>Attempted_Contact__c</fullName>
    <label>z_Attempted Contact</label>
    <type>Date</type>
</CustomField>