unpackaged/main/default/objects/Opportunity/fields/Awarded_Amount__c.field-meta.xml
<CustomField>
    <fullName>Awarded_Amount__c</fullName>
    <label>Awarded Amount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$5,000</fullName>
            </value>
            <value>
                <fullName>$10,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>