unpackaged/main/default/objects/Opportunity/fields/Bridge_Call_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Bridge_Call_Completed_Date__c</fullName>
    <label>Bridge Call Completed Date</label>
    <type>Date</type>
</CustomField>