unpackaged/main/default/objects/Opportunity/fields/Change_the_World_Application__c.field-meta.xml
<CustomField>
    <fullName>Change_the_World_Application__c</fullName>
    <description>This link is autogenerated by FormStack and includes the Change the World application.</description>
    <inlineHelpText>This link is autogenerated and includes the Change the World application. This link can be emailed to students to complete the application.</inlineHelpText>
    <label>z_Change the World Application</label>
    <type>Url</type>
</CustomField>