unpackaged/main/default/objects/Opportunity/fields/Check_1st_Letter_of_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Check_1st_Letter_of_Recommendation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>1st Letter of Recommendation</label>
    <type>Checkbox</type>
</CustomField>