unpackaged/main/default/objects/Opportunity/fields/Check_2nd_Letter_of_Recommendation_2__c.field-meta.xml
<CustomField>
    <fullName>Check_2nd_Letter_of_Recommendation_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2nd Letter of Recommendation</label>
    <type>Checkbox</type>
</CustomField>