unpackaged/main/default/objects/Opportunity/fields/Check_500_Word_Writing_Sample__c.field-meta.xml
<CustomField>
    <fullName>Check_500_Word_Writing_Sample__c</fullName>
    <defaultValue>false</defaultValue>
    <label>500 Word Writing Sample</label>
    <type>Checkbox</type>
</CustomField>