unpackaged/main/default/objects/Opportunity/fields/Check_Household_Income_Document__c.field-meta.xml
<CustomField>
    <fullName>Check_Household_Income_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Household Income Document</label>
    <type>Checkbox</type>
</CustomField>