unpackaged/main/default/objects/Opportunity/fields/Check_Medical_Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Check_Medical_Questionnaire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medical Questionnaire</label>
    <type>Checkbox</type>
</CustomField>