unpackaged/main/default/objects/Opportunity/fields/Check_Mental_Health_Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Check_Mental_Health_Questionnaire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mental Health Questionnaire</label>
    <type>Checkbox</type>
</CustomField>