unpackaged/main/default/objects/Opportunity/fields/Check_Senior_Class_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Check_Senior_Class_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Senior Class Schedule</label>
    <type>Checkbox</type>
</CustomField>