unpackaged/main/default/objects/Opportunity/fields/Check_Supplemental_Essay_CTW__c.field-meta.xml
<CustomField>
    <fullName>Check_Supplemental_Essay_CTW__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supplemental Essay - CTW</label>
    <type>Checkbox</type>
</CustomField>