unpackaged/main/default/objects/Opportunity/fields/Class_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Class_Schedule__c</fullName>
    <label>z_Class Schedule</label>
    <type>Url</type>
</CustomField>