unpackaged/main/default/objects/Opportunity/fields/Cohort__c.field-meta.xml
<CustomField>
    <fullName>Cohort__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cohort</label>
    <referenceTo>Cohort__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>