unpackaged/main/default/objects/Opportunity/fields/College_Counselor__c.field-meta.xml
<CustomField>
    <fullName>College_Counselor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>College Counselor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CollegeCounselorOpps</relationshipName>
    <type>Lookup</type>
</CustomField>