unpackaged/main/default/objects/Opportunity/fields/College_Major_Preference__c.field-meta.xml
<CustomField>
    <fullName>College_Major_Preference__c</fullName>
    <label>z_College Major Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>