unpackaged/main/default/objects/Opportunity/fields/College_Planning_Form__c.field-meta.xml
<CustomField>
    <fullName>College_Planning_Form__c</fullName>
    <label>z_College Planning Form</label>
    <type>Url</type>
</CustomField>