unpackaged/main/default/objects/Opportunity/fields/College_Process_Need_Guidance_Legacy__c.field-meta.xml
<CustomField>
    <fullName>College_Process_Need_Guidance_Legacy__c</fullName>
    <inlineHelpText>This is legacy data from submissions prior to 11-13-2020.</inlineHelpText>
    <label>z_College Process Need Guidance (Legacy)</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>