unpackaged/main/default/objects/Opportunity/fields/Commitment_Form_Complete__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Form_Complete__c</fullName>
    <formula>Account.Commitment_Form_Complete__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commitment Form Complete?</label>
    <type>Checkbox</type>
</CustomField>