unpackaged/main/default/objects/Opportunity/fields/Commitment_Form_Link__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Form_Link__c</fullName>
    <formula>Account.Commitment_Form_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commitment Form Link</label>
    <type>Text</type>
</CustomField>