unpackaged/main/default/objects/Opportunity/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>z_Contact</label>
    <type>Date</type>
</CustomField>