unpackaged/main/default/objects/Opportunity/fields/Contact_ID_HubSpot__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID_HubSpot__c</fullName>
    <label>HubSpot Contact ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>