unpackaged/main/default/objects/Opportunity/fields/Country_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Birth__c</fullName>
    <label>z_Country of Birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>