unpackaged/main/default/objects/Opportunity/fields/Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Time__c</fullName>
    <description>Field created for data migration purposes</description>
    <formula>DATETIMEVALUE( CreatedDate )</formula>
    <label>Created Date/Time</label>
    <type>DateTime</type>
</CustomField>