unpackaged/main/default/objects/Opportunity/fields/CTW_Award_Amount__c.field-meta.xml
<CustomField>
    <fullName>CTW_Award_Amount__c</fullName>
    <label>CTW Award Amount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$30,000</fullName>
            </value>
            <value>
                <fullName>$45,000</fullName>
            </value>
            <value>
                <fullName>$60,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>