unpackaged/main/default/objects/Opportunity/fields/CTW_Grant_Amount__c.field-meta.xml
<CustomField>
    <fullName>CTW_Grant_Amount__c</fullName>
    <description>Change the World grant amount</description>
    <inlineHelpText>Change the World grant amount</inlineHelpText>
    <label>CTW Grant Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>