unpackaged/main/default/objects/Opportunity/fields/Current_Program__c.field-meta.xml
<CustomField>
    <fullName>Current_Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Represents what program the student is currently in. After closed won, this field can only be edited via automation when the corresponding field is updated on the enrollment record.</description>
    <label>Current Program</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Program__c.Location__r.Name</field>
            <operation>notEqual</operation>
            <value>UNDECIDED</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Opportunities (Current Program)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>