unpackaged/main/default/objects/Opportunity/fields/Current_Program_Automation_Run_Time__c.field-meta.xml
<CustomField>
    <fullName>Current_Program_Automation_Run_Time__c</fullName>
    <description>Timestamped each time a change to the Program field on the enrollment triggers the process that updates the Current Program field on the opp. This allows the process to bypass validation.</description>
    <label>Current Program Automation Run Time</label>
    <type>DateTime</type>
</CustomField>