unpackaged/main/default/objects/Opportunity/fields/Current_Program_Semester__c.field-meta.xml
<CustomField>
    <fullName>Current_Program_Semester__c</fullName>
    <formula>Current_Program__r.Semester__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Program Semester</label>
    <type>Text</type>
</CustomField>