unpackaged/main/default/objects/Opportunity/fields/D2_Letter_of_Recommendation_Submitted_On__c.field-meta.xml
<CustomField>
    <fullName>D2_Letter_of_Recommendation_Submitted_On__c</fullName>
    <label>2 Letter of Recommendation Submitted On</label>
    <type>Date</type>
</CustomField>