unpackaged/main/default/objects/Opportunity/fields/D_High_School_Transcript_Submitted_On__c.field-meta.xml
<CustomField>
    <fullName>D_High_School_Transcript_Submitted_On__c</fullName>
    <label>High School Transcript Submitted On</label>
    <type>Date</type>
</CustomField>