unpackaged/main/default/objects/Opportunity/fields/D_Household_Income_Document_Submitted_On__c.field-meta.xml
<CustomField>
    <fullName>D_Household_Income_Document_Submitted_On__c</fullName>
    <label>Household Income Document Submitted On</label>
    <type>Date</type>
</CustomField>