unpackaged/main/default/objects/Opportunity/fields/D_Medical_Questionnaire_Submitted_On__c.field-meta.xml
<CustomField>
    <fullName>D_Medical_Questionnaire_Submitted_On__c</fullName>
    <label>Medical Questionnaire Submitted On</label>
    <type>Date</type>
</CustomField>