unpackaged/main/default/objects/Opportunity/fields/D_Supplemental_Essay_CTW_Submitted_On__c.field-meta.xml
<CustomField>
    <fullName>D_Supplemental_Essay_CTW_Submitted_On__c</fullName>
    <label>Supplemental Essay - CTW Submitted On</label>
    <type>Date</type>
</CustomField>