unpackaged/main/default/objects/Opportunity/fields/Deposit_Paylink_URL__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Paylink_URL__c</fullName>
    <label>Deposit Paylink URL</label>
    <type>Url</type>
</CustomField>