unpackaged/main/default/objects/Opportunity/fields/Deposit_Refund_Date__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Refund_Date__c</fullName>
    <inlineHelpText>Date is set if the deposit amount has been partially/fully refunded</inlineHelpText>
    <label>Deposit Refund Date</label>
    <type>Date</type>
</CustomField>