unpackaged/main/default/objects/Opportunity/fields/Discount_Total__c.field-meta.xml
<CustomField>
    <fullName>Discount_Total__c</fullName>
    <inlineHelpText>Total is pulled from the Tuition Sales Document Discount Total field.</inlineHelpText>
    <label>Discount Total</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>