unpackaged/main/default/objects/Opportunity/fields/EA_Packet_Signed__c.field-meta.xml
<CustomField>
    <fullName>EA_Packet_Signed__c</fullName>
    <label>z_EA Packet Signed</label>
    <type>Date</type>
</CustomField>