unpackaged/main/default/objects/Opportunity/fields/EA_Signed_Boolean__c.field-meta.xml
<CustomField>
    <fullName>EA_Signed_Boolean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_EA Signed</label>
    <type>Checkbox</type>
</CustomField>