unpackaged/main/default/objects/Opportunity/fields/Early_Enrollment_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Early_Enrollment_Discount_Amount__c</fullName>
    <label>Early Enrollment Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>