unpackaged/main/default/objects/Opportunity/fields/Enrollment_Agreement_URL__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Agreement_URL__c</fullName>
    <formula>&#39;https://vertoeducation.formstack.com/forms/Enrollment_Agreement?oid=&#39; + Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrollment Agreement URL</label>
    <type>Text</type>
</CustomField>