unpackaged/main/default/objects/Opportunity/fields/Enrollment_Record__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrollment Record</label>
    <referenceTo>Enrollment_Record__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>