unpackaged/main/default/objects/Opportunity/fields/Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Status__c</fullName>
    <formula>TEXT(Enrollment_Record__r.Enrollment_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrollment Status</label>
    <type>Text</type>
</CustomField>