unpackaged/main/default/objects/Opportunity/fields/Estimated_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Amount_Due__c</fullName>
    <description>Critical data point for financial services reporting</description>
    <formula>Net_Tuition__c -  Amount_Paid__c -  Tentative_Pell_Grant_Amount__c -  Tentative_Student_Loan_Amount__c - Tentative_Parent_Loan_Amount__c - Tentative_Private_Loan_Amount__c -  Deposit_Amount__c -  Verto_Fund_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Net Tuition minus Amount Paid, Tentative Pell Grant Amount, tentative loan amounts, Verto Fund Amount and Deposit Amount</inlineHelpText>
    <label>Estimated Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>