unpackaged/main/default/objects/Opportunity/fields/Expected_Family_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Expected_Family_Contribution__c</fullName>
    <description>A measure of the student&#39;s family’s financial strength and is calculated according to a formula established by law. This number is reported to Verto from the government office of Federal Student Aid based on info in the student&#39;s FAFSA.</description>
    <label>Expected Family Contribution</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>