unpackaged/main/default/objects/Opportunity/fields/Expense_Documents__c.field-meta.xml
<CustomField>
    <fullName>Expense_Documents__c</fullName>
    <label>z_Expense Documents</label>
    <type>Url</type>
</CustomField>