unpackaged/main/default/objects/Opportunity/fields/Expressed_Ability_Level__c.field-meta.xml
<CustomField>
    <fullName>Expressed_Ability_Level__c</fullName>
    <label>z_Expressed Ability Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>