unpackaged/main/default/objects/Opportunity/fields/External_Scholarships__c.field-meta.xml
<CustomField>
    <fullName>External_Scholarships__c</fullName>
    <label>External Scholarships</label>
    <length>254</length>
    <type>Text</type>
</CustomField>