unpackaged/main/default/objects/Opportunity/fields/External_Scholarships_Amount__c.field-meta.xml
<CustomField>
    <fullName>External_Scholarships_Amount__c</fullName>
    <label>External Scholarships Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>