unpackaged/main/default/objects/Opportunity/fields/Fafsa__c.field-meta.xml
<CustomField>
    <fullName>Fafsa__c</fullName>
    <label>FAFSA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>