unpackaged/main/default/objects/Opportunity/fields/Family_Admissions_Call_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Family_Admissions_Call_Date_Time__c</fullName>
    <inlineHelpText>The date and time that the Family Admissions Call takes place on</inlineHelpText>
    <label>Family Admissions Call Date/Time</label>
    <type>DateTime</type>
</CustomField>