unpackaged/main/default/objects/Opportunity/fields/Family_Admissions_Call_Notes__c.field-meta.xml
<CustomField>
    <fullName>Family_Admissions_Call_Notes__c</fullName>
    <label>Family Admissions Call Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>