unpackaged/main/default/objects/Opportunity/fields/Family_Admissions_Call_Status__c.field-meta.xml
<CustomField>
    <fullName>Family_Admissions_Call_Status__c</fullName>
    <label>Family Admissions Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Scheduled</fullName>
                <default>true</default>
                <label>Not Scheduled</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>