unpackaged/main/default/objects/Opportunity/fields/Family_Financial_Call_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Family_Financial_Call_Date_Time__c</fullName>
    <description>The date and time that the Family Financial Call takes place on</description>
    <inlineHelpText>The date and time that the Family Financial Call takes place on</inlineHelpText>
    <label>Family Financial Call Date/Time</label>
    <type>DateTime</type>
</CustomField>