unpackaged/main/default/objects/Opportunity/fields/Family_Interview_Booked_Date__c.field-meta.xml
<CustomField>
    <fullName>Family_Interview_Booked_Date__c</fullName>
    <inlineHelpText>The date that the Family Admissions Call is booked. This is not the date that the call takes place on.</inlineHelpText>
    <label>Family Admissions Call Booked Date</label>
    <type>Date</type>
</CustomField>