unpackaged/main/default/objects/Opportunity/fields/Financial_Notes__c.field-meta.xml
<CustomField>
    <fullName>Financial_Notes__c</fullName>
    <description>Note field for student Financial Services team</description>
    <label>Financial Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>