unpackaged/main/default/objects/Opportunity/fields/Five9_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Five9_Campaign__c</fullName>
    <description>Created to track Five9 campaigns initiated by the Marketing team. This field is not integrated with Five9.</description>
    <label>Five9 Campaign</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Early Enrollment Discount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>