unpackaged/main/default/objects/Opportunity/fields/Flag_for_update__c.field-meta.xml
<CustomField>
    <fullName>Flag_for_update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_Flag for update</label>
    <type>Checkbox</type>
</CustomField>