unpackaged/main/default/objects/Opportunity/fields/Funding_Plan__c.field-meta.xml
<CustomField>
    <fullName>Funding_Plan__c</fullName>
    <description>Notes on the student&#39;s plan to fund their Verto enrollment</description>
    <label>Funding Plan</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>