unpackaged/main/default/objects/Opportunity/fields/High_School_Transcript__c.field-meta.xml
<CustomField>
    <fullName>High_School_Transcript__c</fullName>
    <label>z_High School Transcript</label>
    <type>Url</type>
</CustomField>