unpackaged/main/default/objects/Opportunity/fields/High_School_Transcript_Planning__c.field-meta.xml
<CustomField>
    <fullName>High_School_Transcript_Planning__c</fullName>
    <description>This field is populated from the College Planning Form.</description>
    <inlineHelpText>This field is populated from the College Planning Form.</inlineHelpText>
    <label>z_High School Transcript (Planning)</label>
    <type>Url</type>
</CustomField>