unpackaged/main/default/objects/Opportunity/fields/Household_Income_Doc_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Household_Income_Doc_Legacy__c</fullName>
    <label>z_Household Income Doc (Legacy)</label>
    <type>Url</type>
</CustomField>