unpackaged/main/default/objects/Opportunity/fields/Household_Income_Proof__c.field-meta.xml
<CustomField>
    <fullName>Household_Income_Proof__c</fullName>
    <label>z_Household Income Proof</label>
    <type>Url</type>
</CustomField>