unpackaged/main/default/objects/Opportunity/fields/HubSpot_Documents__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_Documents__c</fullName>
    <label>HubSpot Documents</label>
    <length>255</length>
    <type>Text</type>
</CustomField>